--- a/main.css
+++ b/main.css
@@ -14,8 +14,12 @@ body > header {
 header .container{
     display: flex;
     align-items: center; 
-    justify-content:space-between;
-    
+    justify-content:space-between;    
+}
+header .container h1{
+        font-family: "Yellowtail", cursive;
+        font-weight: 400;
+        font-style: normal; 
 }
 .container{    
     width: 1366px;
@@ -28,6 +32,9 @@ header .container li {
 }
 
 header li a {
+    font-family: "Yellowtail", cursive;
+    font-weight: 400;
+    /* font-style: normal;  */
     color:#fff;
     text-decoration: none;
 }
