--- a/nossos_bolos.css
+++ b/nossos_bolos.css
@@ -17,6 +17,9 @@
     align-items: center;
 }
 header .container h1{
+    font-family: "Yellowtail", cursive;
+    font-weight: 400;
+    font-style: normal; 
     color: #fff;
 }
 
@@ -25,6 +28,9 @@ header .container h1{
     margin-right: 16px;
 }
 #header .container li a{
+    font-family: "Yellowtail", cursive;
+    font-weight: 400;
+    /* font-style: normal;  */
     text-decoration: none;
     color: #fff;
 }
@@ -41,6 +47,8 @@ header .container h1{
 .title-our-cakes ,
 .title-special-cakes,
 .title-promotional-cakes {
+    font-family: "Yellowtail", cursive;
+    font-style: normal; 
     color: #fff;
     background-color: rgb(56, 172, 172);
     padding-left: 100px;
